--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,12 +25,24 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      # Set up JDK 17
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      # Build with Maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+
+      # Run tests with Maven
+      - name: Test with Maven
+        run: mvn test
+
+      # Deploy step (runs only on push to main)
+      - name: Deploy
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo "Deploying application..."
+          # Add your deployment commands here (e.g., upload to server, cloud, etc.)
